# pilot-hdc-dataset

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Makefile  README.md  build_and_push.sh  docker-compose.yaml  pyproject.toml
.github/workflows/: hdc-pipeline.yml
dataset/: __init__.py  __main__.py  app.py  config.py  logger.py
dataset/components/: __init__.py  crud.py  db_model.py  exceptions.py  filtering.py  models.py  pagination.py  parameters.py  schemas.py  sorting.py  types.py
dataset/components/activity_log/: dataset_activity_log.py  file_folder_activity_log.py  schemas.py
dataset/components/bids_result/: __init__.py  crud.py  dependencies.py  models.py  schemas.py  views.py
dataset/components/dataset/: __init__.py  activity_log.py  crud.py  dependencies.py  exceptions.py  filtering.py  models.py  object_storage_manager.py  parameters.py  schemas.py  views.py
dataset/components/file/: __init__.py  activity_log.py  crud.py  dependencies.py  locks.py  schemas.py  tasks.py  types.py  views.py
dataset/components/folder/: __init__.py  activity_log.py  crud.py  dependencies.py  exceptions.py  schemas.py  views.py
dataset/components/health/: __init__.py  dependencies.py  views.py
dataset/components/object_storage/: policy.py  policy_templates.py  s3.py
dataset/components/preview/: __init__.py  schemas.py  views.py
dataset/components/schema/: __init__.py  activity_log.py  crud.py  dependencies.py  exceptions.py  models.py  schemas.py  views.py
dataset/components/schema_template/: __init__.py  activity_log.py  crud.py  dependencies.py  models.py  schemas.py  views.py
dataset/components/version/: __init__.py  activity_log.py  crud.py  dependencies.py  filtering.py  models.py  parameters.py  publisher.py  schemas.py  views.py
dataset/components/version_sharing/: __init__.py  activity_log.py  crud.py  filtering.py  models.py  parameters.py  schemas.py  views.py
dataset/dependencies/: __init__.py  db.py  kafka.py  redis.py  s3.py  services.py
dataset/services/: __init__.py  activity_log.py  base.py  metadata.py  project.py  queue.py  task_stream.py
dataset/startup/: __init__.py  api_registry.py  exception_handlers.py  instrument_app.py  middlewares.py
metrics/: prometheus.yaml
migrations/: env.py
migrations/versions/: 0001_legacy_tables.py  0002_added_dataset_table.py  0003_update_bids_result_table.py  0004_change_dataset_geid_default_from_template_schema.py  0005_add_system_defined_schema_templates.py  0007_add_name_dataset_id_unique_key_to_schema_template.py  0008_add_fk_version_datasets.py  0009_add_bids_results_dataset_code_unique.py  0010_rename_geid_and_dataset_geid_coulumn_in_schema_table.py  0011_add_name_dataset_id_unique_to_schema_.py  0012_add_indices_on_created_at_and_creator_.py  0013_change_project_id_to_not_nullable.py  0014_change_version_primary_key_to_uuid.py  0015_add_version_sharing_requests_table.py  58d846d0dfaf_update_bids_validate_column.py
tests/: conftest.py
tests/components/: test_filtering.py  test_models.py  test_parameters.py  test_sorting.py  test_types.py
tests/components/bids_result/: test_views.py
tests/components/dataset/: test_create_dataset.py  test_views.py
tests/components/file/: test_background_task.py  test_delete_from_dataset.py  test_get.py  test_import_files_list.py  test_move_files.py  test_rename_file.py
tests/components/folder/: test_api_dataset_folder.py
tests/components/health/: test_health.py
tests/components/object_storage/: test_policy.py
tests/components/preview/: test_api_preview.py
tests/components/request/: test_network.py
tests/components/schema/: test_api_schema.py
tests/components/schema_template/: test_api_schema_template.py
tests/components/version/: test_versions.py
tests/components/version_sharing/: test_activity_log.py  test_models.py  test_views.py
tests/dependencies/: test_db.py  test_s3.py
tests/fixtures/: app.py  db.py  fake.py  jq.py  kafka.py  policy.py  redis.py  s3.py
tests/fixtures/components/: __init__.py  _base_factory.py  _factories.py  bids_result.py  dataset.py  schema.py  schema_template.py  version.py  (+1 more)
tests/resources/: test_locks.py
tests/services/: test_dataset_activity_log_service.py  test_file_folder_activity_log_service.py  test_metadata.py
(+2 files in other folders)
