[tool.poetry]
name = "dataset"
version = "2.3.14"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.115.4"
fastapi-utils = "^0.8.0"
greenlet = "^3.1.1"
psycopg2 = "^2.9.10"
bids-validator = "^1.14.7"
opentelemetry-exporter-otlp = "1.27.0"
opentelemetry-instrumentation = "0.48b0"
opentelemetry-instrumentation-fastapi = "0.48b0"
opentelemetry-instrumentation-httpx = "0.48b0"
prometheus-fastapi-instrumentator = "6.1.0"
aioredis = "2.0.1"
SQLAlchemy = "1.4.44"
asyncpg = "^0.30.0"
aiokafka = "^0.12.0"
requests = "^2.32.0"
pilot-platform-common = "^0.8.0"
pydantic = "1.10.18"
uvicorn = "^0.32.0"
fastavro = "^1.9.4"
setuptools = ">=70.0"

[tool.poetry.dev-dependencies]
pytest-env = "^0.8.1"
pytest-asyncio = "0.18.3"
async-asgi-testclient = "1.4.11"
testcontainers = "4.7.2"
pytest = "7.2.0"
pytest-cov = "6.0.0"
pytest-httpx = "^0.30.0"
Faker = "13.16.0"
pytest-random-order = "^1.1.1"
jq = "1.3.0"
alembic = "1.8.1"
redis = "^4.4.2"

[tool.pytest.ini_options]
addopts = "-v --random-order"
testpaths = "tests"
asyncio_mode = "auto"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
