[tool.poetry]
name = "dataset"
version = "2.3.38"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.116.1"
greenlet = "^3.1.1"
psycopg2 = "^2.9.10"
bids-validator = "^1.14.7"
opentelemetry-exporter-otlp = "1.27.0"
opentelemetry-instrumentation = "0.48b0"
opentelemetry-instrumentation-fastapi = "0.48b0"
opentelemetry-instrumentation-httpx = "0.48b0"
prometheus-fastapi-instrumentator = "6.1.0"
redis = "6.2.0"
SQLAlchemy = "1.4.54"
asyncpg = "^0.30.0"
aiokafka = "^0.12.0"
requests = "2.32.4"
httpx = "0.27.2"
pilot-platform-common = "0.8.2"
pydantic = "1.10.18"
uvicorn = "^0.32.0"
fastavro = "1.10.0"
setuptools = ">=70.0"

[tool.poetry.group.dev.dependencies]
pytest-env = "^0.8.1"
pytest-asyncio = "0.18.3"
testcontainers = "4.9.1"
pytest = "7.2.0"
pytest-cov = "6.0.0"
pytest-httpx = "^0.30.0"
pytest-mock = "3.14.0"
Faker = "37.1.0"
pytest-random-order = "^1.1.1"
jq = "1.3.0"
alembic = "1.13.3"
pyyaml = "6.0.2"

[tool.pytest.ini_options]
addopts = "-v --random-order"
testpaths = "tests"
asyncio_mode = "auto"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
